feat: Add comprehensive email system and evaluation editing
- Add professional HTML email template for decision notifications
- Add committee member email sending system with individual/bulk options
- Add evaluation editing functionality for reviewers
- Add decision override for admin when evaluations are tied
- Update email configuration to use colloque address
- Add logout functionality
- Improve UI/UX with modern design and animations

Features:
✅ Professional email templates with CSS/JS
✅ Committee member management (23 members)
✅ Individual and bulk email sending
✅ Evaluation editing for reviewers
✅ Admin decision override for ties
✅ Modern responsive design

--- a/.env.local.example
+++ b/.env.local.example
@@ -16,3 +16,10 @@ NEXTAUTH_URL=http://localhost:3000
 NEXT_PUBLIC_SUPABASE_URL=https://xxxxx.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJ...
 SUPABASE_SERVICE_ROLE_KEY=eyJ...
+
+# Configuration Email (Gmail)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=colloque.entrepreneuriat6@gmail.com
+EMAIL_PASS=votre_mot_de_passe_app
+EMAIL_FROM="Colloque Entrepreneuriat Féminin" <colloque.entrepreneuriat6@gmail.com>
